--- a/cpp_physics_experiments/cpp_physics_experiments.vcxproj
+++ b/cpp_physics_experiments/cpp_physics_experiments.vcxproj
@@ -102,13 +102,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\garto\source\libs\SDL\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\garto\source\libs\SDL\include;C:\Users\garto\source\libs\glew\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>C:\Users\garto\source\libs\SDL\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\garto\source\libs\SDL\lib;C:\Users\garto\source\libs\glew\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL3.lib;glew32.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
