--- a/cpp_physics_experiments/cpp_physics_experiments.vcxproj
+++ b/cpp_physics_experiments/cpp_physics_experiments.vcxproj
@@ -128,9 +128,11 @@
   <ItemGroup>
     <ClCompile Include="cpp_physics_experiments.cpp" />
     <ClCompile Include="MainGame.cpp" />
+    <ClCompile Include="Sprite.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainGame.h" />
+    <ClInclude Include="Sprite.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
