--- a/cpp_physics_experiments/cpp_physics_experiments.vcxproj.filters
+++ b/cpp_physics_experiments/cpp_physics_experiments.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="Sprite.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TestShader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Sprite.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TestShader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
